samples/_failures_safe/1761689203_e67b36_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c3781520.c: In function ‘main’:
./samples/SAFE/__tmp_c3781520.c:146:21: error: expected ‘)’ at end of input
  146 |             if (next
      |                ~    ^
      |                     )
./samples/SAFE/__tmp_c3781520.c:146:13: error: expected declaration or statement at end of input
  146 |             if (next
      |             ^~
./samples/SAFE/__tmp_c3781520.c:146:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c3781520.c:146:13: error: expected declaration or statement at end of input
